[package]
name = "act-local-cache-server"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
glob = "0.3"
log = "0.4"
once_cell = "1.16"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
